// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Method component buildIOcomponent returns null if no widget tag 1`] = `
<WithStyles(WidgetGroupExpander)
  groupName="Test"
  key="Test,Method"
>
  <div>
    <div
      className="MethodDetails-div-1"
      key="first"
    >
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={0}
            fieldType="method:takes"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <WithStyles(Typography)
        className="MethodDetails-textName-2"
      >
        First input
      </WithStyles(Typography)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={false}
          Units={null}
          Value=""
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          isDirty={false}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <div
      className="MethodDetails-div-1"
      key="second"
    >
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={0}
            fieldType="method:takes"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <WithStyles(Typography)
        className="MethodDetails-textName-2"
      >
        Second input
      </WithStyles(Typography)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(Tooltip)
          title="widget:undefined"
        >
          <pure(BugReportIcon)
            nativeColor="red"
          />
        </WithStyles(Tooltip)>
      </div>
    </div>
    <div
      className="MethodDetails-div-1"
    >
      <WithStyles(Tooltip)
        title=""
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={0}
            fieldType="method"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <div
        className="MethodDetails-controlContainer-3"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <WithStyles(ButtonAction)
          clickAction={[Function]}
          disabled={false}
          method={true}
          text="Test"
        />
      </div>
    </div>
  </div>
</WithStyles(WidgetGroupExpander)>
`;

exports[`Method component renders correctly with default inputs 1`] = `
<WithStyles(WidgetGroupExpander)
  groupName="Test"
  key="Test,Method"
>
  <div>
    <div
      className="MethodDetails-div-1"
      key="first"
    >
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={0}
            fieldType="method:takes"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <WithStyles(Typography)
        className="MethodDetails-textName-2"
      >
        First input
      </WithStyles(Typography)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={false}
          Units={null}
          Value="1"
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          isDirty={false}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <div
      className="MethodDetails-div-1"
      key="second"
    >
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={0}
            fieldType="method:takes"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <WithStyles(Typography)
        className="MethodDetails-textName-2"
      >
        Second input
      </WithStyles(Typography)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={false}
          Units={null}
          Value="two"
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          isDirty={false}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <div
      className="MethodDetails-div-1"
    >
      <WithStyles(Tooltip)
        title=""
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={0}
            fieldType="method"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <div
        className="MethodDetails-controlContainer-3"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <WithStyles(ButtonAction)
          clickAction={[Function]}
          disabled={false}
          method={true}
          text="Test"
        />
      </div>
    </div>
  </div>
</WithStyles(WidgetGroupExpander)>
`;

exports[`Method component renders correctly with empty inputs 1`] = `
<WithStyles(WidgetGroupExpander)
  groupName="Test"
  key="Test,Method"
>
  <div>
    <div
      className="MethodDetails-div-1"
      key="first"
    >
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={0}
            fieldType="method:takes"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <WithStyles(Typography)
        className="MethodDetails-textName-2"
      >
        First input
      </WithStyles(Typography)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={false}
          Units={null}
          Value=""
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          isDirty={false}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <div
      className="MethodDetails-div-1"
      key="second"
    >
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={0}
            fieldType="method:takes"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <WithStyles(Typography)
        className="MethodDetails-textName-2"
      >
        Second input
      </WithStyles(Typography)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={false}
          Units={null}
          Value=""
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          isDirty={false}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <div
      className="MethodDetails-div-1"
    >
      <WithStyles(Tooltip)
        title=""
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={0}
            fieldType="method"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <div
        className="MethodDetails-controlContainer-3"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <WithStyles(ButtonAction)
          clickAction={[Function]}
          disabled={false}
          method={true}
          text="Test"
        />
      </div>
    </div>
  </div>
</WithStyles(WidgetGroupExpander)>
`;

exports[`Method component renders correctly with existing input values 1`] = `
<WithStyles(WidgetGroupExpander)
  groupName="Test"
  key="Test,Method"
>
  <div>
    <div
      className="MethodDetails-div-1"
      key="first"
    >
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={-2}
            fieldType="method:takes"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <WithStyles(Typography)
        className="MethodDetails-textName-2"
      >
        First input
      </WithStyles(Typography)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={false}
          Units={null}
          Value="3"
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          isDirty={true}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <div
      className="MethodDetails-div-1"
      key="second"
    >
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={-2}
            fieldType="method:takes"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <WithStyles(Typography)
        className="MethodDetails-textName-2"
      >
        Second input
      </WithStyles(Typography)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={false}
          Units={null}
          Value="four"
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          isDirty={true}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <div
      className="MethodDetails-div-1"
    >
      <WithStyles(Tooltip)
        title=""
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={0}
            fieldType="method"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <div
        className="MethodDetails-controlContainer-3"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <WithStyles(ButtonAction)
          clickAction={[Function]}
          disabled={false}
          method={true}
          text="Test"
        />
      </div>
    </div>
  </div>
</WithStyles(WidgetGroupExpander)>
`;

exports[`Method component renders correctly with invalid inputs 1`] = `
<WithStyles(WidgetGroupExpander)
  groupName="Test"
  key="Test,Method"
>
  <div>
    <div
      className="MethodDetails-div-1"
      key="first"
    >
      <WithStyles(Tooltip)
        title="this is not valid"
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={1}
            fieldType="method:takes"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <WithStyles(Typography)
        className="MethodDetails-textName-2"
      >
        First input
      </WithStyles(Typography)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={false}
          Units={null}
          Value="1"
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          isDirty={true}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <div
      className="MethodDetails-div-1"
      key="second"
    >
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={0}
            fieldType="method:takes"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <WithStyles(Typography)
        className="MethodDetails-textName-2"
      >
        Second input
      </WithStyles(Typography)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={false}
          Units={null}
          Value="two"
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          isDirty={false}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <div
      className="MethodDetails-div-1"
    >
      <WithStyles(Tooltip)
        title=""
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={0}
            fieldType="method"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <div
        className="MethodDetails-controlContainer-3"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <WithStyles(ButtonAction)
          clickAction={[Function]}
          disabled={false}
          method={true}
          text="Test"
        />
      </div>
    </div>
  </div>
</WithStyles(WidgetGroupExpander)>
`;

exports[`Method component renders correctly with no inputs or outputs 1`] = `
<div
  className="MethodDetails-div-1"
>
  <WithStyles(Tooltip)
    title=""
  >
    <WithStyles(IconButton)
      className="MethodDetails-button-6"
      disableRipple={true}
      onClick={[Function]}
      tabIndex="-1"
    >
      <WithTheme(AttributeAlarm)
        alarmSeverity={0}
        fieldType="method"
      />
    </WithStyles(IconButton)>
  </WithStyles(Tooltip)>
  <div
    className="MethodDetails-controlContainer-3"
    style={
      Object {
        "width": "100%",
      }
    }
  >
    <WithStyles(ButtonAction)
      clickAction={[Function]}
      disabled={false}
      method={true}
      text="Test"
    />
  </div>
</div>
`;

exports[`Method component renders correctly with return value 1`] = `
<WithStyles(WidgetGroupExpander)
  groupName="Test"
  key="Test,Method"
>
  <div>
    <div
      className="MethodDetails-div-1"
      key="first"
    >
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={0}
            fieldType="method:takes"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <WithStyles(Typography)
        className="MethodDetails-textName-2"
      >
        First input
      </WithStyles(Typography)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={false}
          Units={null}
          Value=""
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          isDirty={false}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <div
      className="MethodDetails-div-1"
      key="second"
    >
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={0}
            fieldType="method:takes"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <WithStyles(Typography)
        className="MethodDetails-textName-2"
      >
        Second input
      </WithStyles(Typography)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={false}
          Units={null}
          Value=""
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          isDirty={false}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <div
      className="MethodDetails-div-1"
    >
      <WithStyles(Tooltip)
        title=""
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={0}
            fieldType="method"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <div
        className="MethodDetails-controlContainer-3"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <WithStyles(ButtonAction)
          clickAction={[Function]}
          disabled={false}
          method={true}
          text="Test"
        />
      </div>
    </div>
    <div>
      <WithStyles(Typography)
        className="MethodDetails-textName-2"
        style={
          Object {
            "paddingLeft": "20px",
            "paddingTop": "4px",
          }
        }
        variant="subheading"
      >
        Last Return:
      </WithStyles(Typography)>
      <div
        className="MethodDetails-div-1"
        key="first"
      >
        <WithStyles(Tooltip)>
          <WithStyles(IconButton)
            className="MethodDetails-button-6"
            disableRipple={true}
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
            tabIndex="-1"
          >
            <WithTheme(AttributeAlarm)
              alarmSeverity={0}
              fieldType="method:returns"
            />
          </WithStyles(IconButton)>
        </WithStyles(Tooltip)>
        <WithStyles(Typography)
          className="MethodDetails-textName-2"
        >
          First output
        </WithStyles(Typography)>
        <div
          className="MethodDetails-controlContainer-3"
        >
          <WithStyles(WidgetLED)
            LEDState={true}
            colorBorder="#7986cb"
            colorCenter="#7986cb"
          />
        </div>
      </div>
      <div
        className="MethodDetails-div-1"
        key="second"
      >
        <WithStyles(Tooltip)>
          <WithStyles(IconButton)
            className="MethodDetails-button-6"
            disableRipple={true}
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }
            tabIndex="-1"
          >
            <WithTheme(AttributeAlarm)
              alarmSeverity={0}
              fieldType="method:returns"
            />
          </WithStyles(IconButton)>
        </WithStyles(Tooltip)>
        <WithStyles(Typography)
          className="MethodDetails-textName-2"
        >
          Second output
        </WithStyles(Typography)>
        <div
          className="MethodDetails-controlContainer-3"
        >
          <WithStyles(WidgetTextUpdate)
            Text="done"
            Units={null}
          />
        </div>
      </div>
    </div>
  </div>
</WithStyles(WidgetGroupExpander)>
`;

exports[`Method component renders correctly without return value 1`] = `
<WithStyles(WidgetGroupExpander)
  groupName="Test"
  key="Test,Method"
>
  <div>
    <div
      className="MethodDetails-div-1"
      key="first"
    >
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={-2}
            fieldType="method:takes"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <WithStyles(Typography)
        className="MethodDetails-textName-2"
      >
        First input
      </WithStyles(Typography)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={false}
          Units={null}
          Value="3"
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          isDirty={true}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <div
      className="MethodDetails-div-1"
      key="second"
    >
      <WithStyles(Tooltip)
        title="a test input"
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={-2}
            fieldType="method:takes"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <WithStyles(Typography)
        className="MethodDetails-textName-2"
      >
        Second input
      </WithStyles(Typography)>
      <div
        className="MethodDetails-controlContainer-3"
      >
        <WithStyles(WidgetTextInput)
          Error={false}
          Pending={false}
          Units={null}
          Value="four"
          blurHandler={[Function]}
          continuousSend={true}
          focusHandler={[Function]}
          forceUpdate={false}
          isDirty={true}
          setFlag={[Function]}
          submitEventHandler={[Function]}
        />
      </div>
    </div>
    <div
      className="MethodDetails-div-1"
    >
      <WithStyles(Tooltip)
        title=""
      >
        <WithStyles(IconButton)
          className="MethodDetails-button-6"
          disableRipple={true}
          onClick={[Function]}
          style={
            Object {
              "cursor": "pointer",
            }
          }
          tabIndex="-1"
        >
          <WithTheme(AttributeAlarm)
            alarmSeverity={0}
            fieldType="method"
          />
        </WithStyles(IconButton)>
      </WithStyles(Tooltip)>
      <div
        className="MethodDetails-controlContainer-3"
        style={
          Object {
            "width": "100%",
          }
        }
      >
        <WithStyles(ButtonAction)
          clickAction={[Function]}
          disabled={false}
          method={true}
          text="Test"
        />
      </div>
    </div>
  </div>
</WithStyles(WidgetGroupExpander)>
`;
